lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/LoveLetters.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|09 Oct 2000 13:25:42 -0000
vti_author:SR|hmbadler
vti_modifiedby:SR|hmbadler
vti_timecreated:TR|11 Aug 2002 20:47:49 -0000
vti_backlinkinfo:VX|tootsplace.html
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\my documents\\my webs\\geocities/c\:/my documents/my webs/geocities:TR|09 Oct 2000 13:25:42 -0000
